Migration & worked css

--- a/LawsonU.csproj
+++ b/LawsonU.csproj
@@ -170,6 +170,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710172315461_InitialCreate.cs" />
+    <Compile Include="Migrations\201710172315461_InitialCreate.Designer.cs">
+      <DependentUpon>201710172315461_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710182215377_Just Messing Around.cs" />
+    <Compile Include="Migrations\201710182215377_Just Messing Around.Designer.cs">
+      <DependentUpon>201710182215377_Just Messing Around.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\LawsonUContext.cs" />
@@ -181,6 +190,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Yeti.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -254,6 +264,14 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.2.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710172315461_InitialCreate.resx">
+      <DependentUpon>201710172315461_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710182215377_Just Messing Around.resx">
+      <DependentUpon>201710182215377_Just Messing Around.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
